--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <h1>this is my first website </h1>
     <p> hey i am sakib</p>
-   
+    <input type="text">
+    <button>click me</button>
 </body>
 </html>
