--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
+   <title>first web</title>
 <body>
     
-    <h1>this is my first website </h1>
+    <h1>this is my first website</h1>
     <p> hey i am sakib</p>
-    <input type="text">
+    name <br>
+    <input type="text"> <br>
     <button>click me</button>
-<<<<<<< HEAD
 
     <i>ama k amar moto thakte daw</i>
-=======
     
-    <b> kothay thaki ki tomar nam bolo abeg makho ovira </b>
+    <b> amar sonar bangla ami tomay valo basi</b>
 
-    <h3>tomi ki amar hasi mokher abar karon hobe</h3>
->>>>>>> 5ed7b2439201269ef9c2d147195128da3c0c5755
+    <h3>amar nam sakib</h3>
 </body>
 </html>
