--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <input type="text"> <br>
     <button>click me</button>
 
-    <i>ama k amar moto thakte daw</i>
+    <p><i>ama k amar moto thakte daw</i></p>
     
     <b> amar sonar bangla ami tomay valo basi</b>
 
