--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
     <h1>this is my first website </h1>
     <p> hey i am sakib</p>
     <input type="text">
-    <button>click me</button>
-<<<<<<< HEAD
+    <button>click me</button> HEAD
 
-    <i>ama k amar moto thakte daw</i>
-=======
-    
+    <p><i>ama k amar moto thakte daw</i></p>
     <b> kothay thaki ki tomar nam bolo abeg makho ovira </b>
 
     <h3>tomi ki amar hasi mokher abar karon hobe</h3>
->>>>>>> 5ed7b2439201269ef9c2d147195128da3c0c5755
 </body>
 </html>
