--- a/index.html
+++ b/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
 <head>
    <title>first web</title>
+   <style>
+    fieldset{background-color: bisque;
+
+    }
+
+   </style>
+   </head>
 <body>
-    
-    <h1>this is my first website</h1>
-    <p> hey i am sakib</p>
-    name <br>
-    <input type="text"> <br>
-    <button>click me</button>
+    <fieldset>
+        <legend> Contuct Us</legend>
+        First Name <br>
+        <input type="text" placeholder="First Name"> <br>
 
-    <p><i>ama k amar moto thakte daw</i></p>
-    
-    <b> amar sonar bangla ami tomay valo basi</b>
-    <p>ami valo asi</p>
+        Last Name <br>
+        <input type="text" placeholder="Last Name"><br>
 
-    <h3>amar nam sakib</h3>
+        Gender: <br>
+        <input type="radio" name="Male"> Male <br>
+        <input type="radio" name="Female"> Female <br>
+        <input type="radio" name="Other"> Other <br> <br>
+        <input type="submit" name="next"> Next
+        <input type="submit" name=" Back"> Back
+
+    </fieldset>
 </body>
 </html>
