--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <input type="radio" name="Male"> Male <br>
         <input type="radio" name="Female"> Female <br>
         <input type="radio" name="Other"> Other <br> <br>
-        <input type="submit" name="next"><br>
-        <button>Back</button>
+        <input type="submit" name="next">
+       
         
 
     </fieldset>
