--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>this is my first website </h1>
-    <p> hey i am sakib</p>
-    <input type="text">
-    <button>click me</button>
+    <fieldset> 
+        <legend>Contuct Us</legend>
+        First Name <br>
+        <input type="text" placeholder="First Name"><br>
+        Last Name <br>
+        <input type="text" placeholder=" Last Name"><br>
+        gender: <br>
+        <input type="radio" name="male"> male
+        <input type="radio" name="female"> female
+        <input type="radio" name="other"> other <br>
+        <input type="submit" value="next">
+        
+      <input type="submit" value="back">
+
+
+
+    </fieldset>
+
 </body>
 </html>
